to methodology now

--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -11,7 +11,7 @@ on Education funded by the Hymen Milgrom Supporting Organization, and the Human 
 Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development, affiliated with
 the Becker Friedman Institute for Research in Economics, and funded by the Institute for New Economic Thinking. The
 views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or
-the official views of the National Institutes of Health. For helpful comments, we thank St\'{e}phane Bonhomme, Steven Durlauf, and Azeem Shaikh. For information on the implementation of the Carolina Abecedarian Project and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. For exceptional research assistance, we thank Thomas Choi. Lastly, we thank Sylvi Kuperman for sharing detailed and careful descriptions of the Carolina Abecedarian Project, as well as the federal and state childcare policies while the program was active. This information helped us improve estimates of the costs of the program and its alternatives.}}
+the official views of the National Institutes of Health. For helpful comments, we thank St\'{e}phane Bonhomme, Steven Durlauf, and Azeem Shaikh. For information on the implementation of the Carolina Abecedarian Project and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. For exceptional research assistance, we thank Thomas Choi. Lastly, we thank Sylvi Kuperman for sharing detailed and careful descriptions of the Carolina Abecedarian Project.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -132,49 +132,39 @@ The University of Chicago}
 
 \subsubsection{ABC}
 
-\noindent The first phase of randomization was conducted at the family level, so pairs of siblings and twins were jointly randomized to either treatment or control groups.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that the pairing was based on HRI, maternal characteristics, number of siblings, and gender, we do not know the original pairs. Overall, the study comprised 120 families. As discussed below, our calculations indicate that 112 families participated in the initial randomization, while 8 families became part of the program as replacement for the families that withdrew.\\
+\noindent The first phase of randomization was conducted at the family level, so pairs of siblings and twins were jointly randomized to either treatment or control groups.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that the pairing was based on HRI, maternal characteristics, number of siblings, and gender, we do not know the original pairs. The study collected an initial sample of 120 families. Twenty-two children did not complete the first-phase of treatment as initially assigned by the randomization or control (see Table~\ref{table:abccompromises}). We document each case and explain how we classify it to assess it with the methodology in Section~\ref{section:methodology}.\\
 
-\noindent There were some compromises in the first phase of randomization. One control child participated in the program, as any other child of the treatment group and three children in the treatment group did not participate, due to the decisions of their families. We have information on these children and their families from birth until the end of elementary school. Four families moved out of the area before any data on them was collected and only data from adulthood is available. Two children in the control group were swapped into treatment at the request of local authorities, because they were considered to be at high-risk of developmental delay. Two additional children in the control group were dropped because they were diagnosed with a developmental delay, which made them ineligible for the program. Most of the data for these last four control children is available from birth until elementary school. Finally, four children died before age 5.\footnote{One child in the control group died at 3 months from cardiomyopathy and seizure disorder, and a second child in the control group died at 18 months from a cardiac arrest. One child in the treatment group died at 3 months from crib death, while the other died in a pedestrian accident at 50 months \citep{Ramey_Campbell_1984_AJMD}.} Thus, we classify 14 children as cases of attrition.
+\noindent First, there were four children assigned to treatment status who left the study before any data on them was collected. The program staff did not assign them an identifier, and we classify them as Cases A, B, C, and D. In our main methodology, we assume that they are missing at random. Sensitivity exercises assuming that these children had outcomes identical to the child with the lowest outcome in the treatment group suggest that, even in this worst case scenario, treatment-group children do much better if compared to control-group children (see Appendix~\ref{appendix:assessingcc}).\\
 
-\noindent The children who stopped participating in the program before they were 6 months old were found replacements with comparable observed characteristics.\footnote{Three replacements are documented in \citet{Ramey_Campbell_1979_SR}. One is documented in correspondence with the program officers, which is available from the authors of this document upon request. The other four replacements are implied by the number of children who participated of the randomization in each cohort.} Overall, the first phase sample consisted of 111 children: 53 treatment children and 58 control children.\\
+\noindent Second, four children died before age 5---two of them initially assigned to treatment and two of them initially assigned to control (these are children were assigned the identifiers ``.x'', 914, 74, and 99). For all of them, we observe baseline characteristics and any other data collected before their dead. For methodological purposes, we include them in any estimations before age 5; they represent cases of program attrition thereafter.\\
 
-\noindent Prior to the second phase of randomization, 3 children in the control group of the first phase and 3 children in the treatment group of the first phase stopped being followed because it was impossible to find them. One child in the control group and 8 children in the treatment group of the first phase did not participate in the second phase but later agreed to participate in the data collections during adulthood. This yielded a sample of 96 children in the second phase: 49 in treatment and 47 in control. After randomization, three children in the treatment group chose not to participate in the program, while all children in the control group adhered to their randomization status. Figure~\ref{fig:abc-flow} illustrates the randomization protocol for the two phases of the program.
+\noindent Third, one child moved out from the programs location after age 15 and no data was collected on him after (identifier 82). We consider him part of the control-group sample before at age 15 and before; after, we consider him a case of program attrition.\\
 
-\newgeometry{top=.8in, bottom=.8in, left=1in, right=1in}
+\noindent Fourth, three children in the treatment group did not comply to treatment status (identifiers 900, 912, 922). They are different from Cases A to D because we observe any data collection for them from birth and up to age 8---afterwards, the program staff decided not to follow them anymore for no evident reason. As we explain later in Section~\ref{section:methodology}, our main parameters  of interest are different version of the intent-to-treat. Thus, these children remain as part of the treatment sample in our estimations at age 8 or before. After, they represent cases of program attrition, given that we do not observe them anymore. In Appendix~\ref{appendix:assessingcc} we find little sensitivity to adjusting for non-compliance of these children in the results we show for age 8 or before.\\
 
-\begin{center}
-	\begin{figure}[H]
-		\caption{Randomization Protocol and Treatment Compliance, ABC} \label{fig:abc-flow}
-		\centering
-		\includegraphics[width=.80\columnwidth]{output/abc_Diagram.pdf}
-\floatfoot{
-\footnotesize
-\noindent
-Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documentation of the program, and own calculations. Note: The variable R represents randomization into treatment [R=1] or control [R=0]. After the original randomization, some children died or withdrew from the program early in life and were replaced. R also includes those replacements. Arrows pointing outside the diagram indicate children who left the study permanently. The variable P represents participation in the preschool-age program. The variable SR represents randomization into the school-age program [SR=1], or out of it [SR=0]. Some children were not randomized at school age [SR=No]. We use the term temporarily attrited for children who did not participate in the study at school age, but were later interviewed in the age-21 followup.
-}
-	\end{figure}
-\end{center}
+\input{output/abc_compromises}
 
-\restoregeometry
+\noindent Fifth, one child initially assigned to control status was enrolled into treatment (identifier 78). Her mother wanted to work and the program staff decided to admit her child into treatment.\footnote{Correspondence with the program officers stating this is available under request from the authors of the present document.} Both in terms of data collection and in terms of methodological purposes, this child is analogous to the children in the third case.\footnote{The sensitivity analysis finding little evidence when adjusting for non-compliance includes this case}\\
 
-\noindent The compromises to randomization pose a methodological challenge that we address when calculating the effects the program on all outcomes and across all ages for which we have data. We develop our methodology further in Section~\ref{section:methodology}.\footnote{In Appendix~\ref{appendix:randomization} we show various comparison exercises to assess how the randomization compromises affect the balance between the treatment and control groups. In sum, we find that the various randomization compromises have little effect on the balance in baseline, observed characteristics.}
+\noindent Sixth, four children treatment-group did not complete treatment in its entirety (identifiers 85, 103, 108, and 123). They were treated for 3, 10, 6, and 9 months, respectively. Except for the childhood follow-ups, in which our main results are not based on, we observe most of the data for these children. We avoid taking a stand on how beneficial was the program at each age, because we do not have a way to document this. Thus, we assume that they were treated as other child in the treatment group.\footnote{If anything, this biases downwards the effects of the program we estimate.} \\
+
+\noindent Seventh, the family of one child in the control group moved at age 54 months (identifier 906). We observe any data collection before the family moved, so we consider the child as part of the control group in any estimation before this event. Afterwards, we do not observe any data on the child, so we consider her a case of program attrition.\\
+
+\noindent Eight, two children initially assigned to treatment status were diagnosed as developmentally delayed after six and thirty-six months of treatment (identifiers 95 and 124, respectively). No data for them is available after the diagnosis. We drop them from the sample because they were not eligible to be part of the program, to begin with, as we explain in Section~\ref{section:eligibility}.\\
+
+\noindent Finally, two children initially assigned to the control group were admitted into treatment (identifiers 82 and 119). Local authorities requested this because the children were considered highly disadvantaged. Data on them is available from birth and up to age 8. We drop these children from the sample, because, most likely, they were not eligible to the program.\\
+
+\noindent The analysis of each of these cases leads to the following conclusions. (i) For four children, we do not have data to methodologically assess them as cases of program attrition, though sensitivity analysis suggest that the treatment effects of the program persist after assigning them the same outcome as the children who did worst in the treatment group. (ii) For the four children who did not comply to treatment (three treatment-group children and one control-group child), adjusting our estimates for non-compliance when data is available makes little difference. (iii) The rest 14 children who did not complete treatment as initially assigned represent different cases of program attrition, for which we propose a methodology in Section~\ref{section:methodology}.\\
+
+\noindent In an effort to increase the number of children in the sample, the program officers recruited additional children before who were added to the program before children were six months old. Although we are not able to know who the replacements are in the sample, the observed characteristics of all the children in the sample indicate that they were eligible to the program---all children in the sample have an HRI of 11 or above (see Figure~\ref{section:eligibility}). Our calculations indicate that there were eight replacements.\footnote{Three replacements are documented in \citet{Ramey_Campbell_1979_SR}. One is documented in correspondence with the program officers, which is available from the authors of the present document upon request. The other four replacements are implied by the number of children who participated of the randomization protocol in each cohort.} Thus, the initial sample consisted of 111 children: 53 treatment children and 58 control children.\\
+
+\noindent Prior to the second phase of randomization, 3 children in the control group of the first phase and 3 children in the treatment group of the first phase stopped being followed because it was impossible to find them. One child in the control group and 8 children in the treatment group of the first phase did not participate in the second phase but later agreed to participate in the data collections during adulthood. This yielded a sample of 96 children in the second phase: 49 in treatment and 47 in control. After randomization, three children in the treatment group chose not to participate in the program, while all children in the control group adhered to their randomization status. Figure~\ref{fig:abc-flow} in Appendix~\ref{appendix:background} illustrates ABC's randomization protocol and the flow of participants throughout the data follow-ups.\\
 
 \subsubsection{CARE}
 
-\noindent 
-The randomization protocol in CARE was analogous to the first phase of randomization in ABC. Notably, it had no major compromises.\footnote{\citet{Bryant_et_al_1987_Carolina_Approach_TIECSE,Wasik_Ramey_etal_1990_CD,Burchinal_Campbell_etal_1997_CD}.} Of the 65 initial families, 23 were randomized to control, 25 to the family education treatment group, and 17 to the family education and center-based childcare treatment group. Two families in the family education treatment group had twins who were jointly randomized, as in ABC. After randomization, the family of one child initially assigned to the family education and center-based childcare treatment refused its status and did not participate in the program. Within the first six months of treatment, one child assigned to this same group left the study due to family relocation. Finally, one child who was assigned to the family education treatment group died. Figure~\ref{fig:care-flow} illustrates CARE's randomization and the flow of participants throughout the data follow-ups.\\
+\noindent The randomization protocol in CARE was analogous to the first-phase of randomization in ABC. Notably, it had no major compromises.\footnote{\citet{Bryant_et_al_1987_Carolina_Approach_TIECSE,Wasik_Ramey_etal_1990_CD,Burchinal_Campbell_etal_1997_CD}.} Of the 65 initial families, 23 were randomized to control, 25 to the family education treatment group, and 17 to the family education and center-based childcare treatment group. Two families in the family education treatment group had twins who were jointly randomized, as in ABC. We document four cases of program attrition (see Table~\ref{table:care_compromises}). For methodological purposes, we consider these children analogous to their corresponding cases in ABC. We do not present exercises to evaluate the sensitivity to non-compliance because there was none in CARE. Figure~\ref{fig:care-flow} in Appendix~\ref{appendix:background} illustrates CARE's randomization protocol and the flow of participants throughout the data follow-ups.\\
 
-\begin{center}
-	\begin{figure}[H]
-		\caption{Follow-up Availability and Attrition, CARE} \label{fig:care-flow}
-		\centering
-		\includegraphics[width=.8\columnwidth]{output/care_Diagram.pdf}
-\floatfoot{
-\footnotesize
-\noindent 
-Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documentation of the program, and own calculations. Note: The variable R represents randomization into control [R=0], family education treatment [R=1], and family education and center-based childcare treatment [R=2]. Arrows pointing outside the diagram indicate children that left the study permanently. The variable P represents participation in the respective programs. Both the treatment groups continued into school-age with a home visitation program that was not randomized. We use the term temporarily attrited for children who did not participate in the study at school age, but were interviewed in the age-21 followup.}
-	\end{figure}
-\end{center}
+\input{output/care_compromises}
 
 \subsection{Program Description and Content}
 
@@ -206,7 +196,7 @@ Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documentation of the program,
 \noindent Note: This figure displays the cumulative density function of enrollment in an alternative preschool for the control group in ABC.}
 \end{figure}
 
-\noindent In ABC, $70\%$ of control-group children was enrolled in one of 11 local center-based childcare centers (see Figure~\ref{fig:treatsubabc}). Each of these centers received federal subsidies and were therefore regulated by the Federal Interagency of Daycare Requirements. Therefore, their staff members were required to be trained in early childhood education and the centers were required to implement approved curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} In CARE, slightly more than $70\%$ of the control group and $60\%$ of the family education group were enrolled in alternative preschools by their parents (see Figure~\ref{fig:treatsubcare}). The parents of the children in both of these groups had as options the same set of local center-based childcare centers as the ABC children in the control group.
+\noindent In ABC, $65\%$ of control-group children was enrolled in one of 11 local center-based childcare centers (see Figure~\ref{fig:treatsubabc}). Each of these centers received federal subsidies and were therefore regulated by the Federal Interagency of Daycare Requirements. Therefore, their staff members were required to be trained in early childhood education and the centers were required to implement approved curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} In CARE, slightly more than $70\%$ of the control group and $60\%$ of the family education group were enrolled in alternative preschools by their parents (see Figure~\ref{fig:treatsubcare}). The parents of the children in both of these groups had as options the same set of local center-based childcare centers as the ABC children in the control group.
 
 \begin{figure}[H]
 		\caption{Treatment Substitution, CARE} \label{fig:treatsubcare}
@@ -219,13 +209,13 @@ Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documentation of the program,
 
 \subsection{Data} \label{section:data}
 
-\noindent In Table~\ref{tab:ecvars_1} to Table~\ref{tab:adultvars_2}, we summarize the data availability for both ABC and CARE. The data collection processes in both programs were analogous by design. For both programs, the treatment and control groups were followed into adulthood with relatively low attrition. For ABC, children were followed annually through elementary school and at ages 12, 15, 21, and 30. Health and administrative crime data were collected when the children reached their mid-30s. For CARE, the exact same follow-ups are available with the exception of the age 15 follow-up.\\
+\noindent Table~\ref{tab:datasumm_1} and Table~\ref{tab:datasumm_2} summarize our data availability. The collection process was analogous in both programs. The treatment and control groups were followed into adulthood with relatively low attrition. For ABC, children were followed annually through elementary school and at ages 12, 15, 21, and 30. Health and administrative crime data were collected when the children reached their mid-30s. For CARE, the exact same follow-ups are available with the exception of the age 15 follow-up.\\
 
-\input{output/abc-care_dataavailability.tex}
+\input{output/abccare_data}
 
-\noindent Information on developmental progress, schooling, home environment, and parental characteristics was recorded through early childcare, elementary school, and at age 21. The data include measures of the child's IQ, achievement test scores, health status, risky behavior, schooling, social interactions, socio-emotional status, and non-cognitive skills. The data also include family and household variables, such as parents'€™ labor market participation, household income, parental IQ, parental schooling, and parental attitudes toward child-rearing. For ages 21 and 30, information on labor market outcomes, income, educational attainment, relationship histories, health statuses, household statuses, risky behavior, and criminal activity is available.\\
+\noindent Information on developmental progress, schooling, home environment, and parental characteristics was recorded through early childcare, elementary school, and at age 21. The data include measures of the child's IQ, achievement test scores, health status, risky behavior, schooling, social interactions, socio-emotional status, and non-cognitive skills. The data also include family and household variables, such as parents' labor market participation, household income, parental IQ, parental schooling, and parental attitudes toward child-rearing. For ages 21 and 30, information on labor market outcomes, income, educational attainment, relationship histories, health statuses, household statuses, risky behavior, and criminal activity is available.\\
 
-\noindent For ABC, information is available on 100 children in the age 30 follow-up, which we call the adult follow-up. In addition, 88 participants---45 from the control group and 43 from the treatment group---consented to the release of their criminal records. Further, 70 participants consented to the release of information regarding a full-range biomedical panel---31 from the control group and 39 from the treatment group. Examples of measures in the health data include incidence of diabetes and high blood pressure, waist-to-hip ratio, height and weight, and cholesterol levels. For CARE, the available data is similar (see Figure~\ref{fig:care-flow}). In Appendix~\ref{appendix:randomization}, we document balance in observed, baseline characteristics across the treatment and control groups, once we drop the individuals for whom we have crime or health information. Further, the methodology we propose addresses missing information in either of these two data categories.
+\noindent For ABC, information is available on 100 children in the age 30 follow-up, which we call the adult follow-up. In addition, 80 participants---40 from the control group and 40 from the treatment group---consented to the release of their criminal records. Further, 70 participants consented to the release of information regarding a full-range biomedical panel---31 from the control group and 39 from the treatment group. Examples of measures in the health data include incidence of diabetes and high blood pressure, waist-to-hip ratio, height and weight, and cholesterol levels. For CARE, the available data is similar. In Appendix~\ref{appendix:randomization}, we document balance in observed, baseline characteristics across the treatment and control groups, once we drop the individuals for whom we have crime or health information. Further, the methodology we propose addresses missing information in either of these two data categories.
 
 \section{Methodology} \label{section:methodology}
 
