--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -3,10 +3,8 @@
 \begin{threeparttable}
 \caption{ABC and CARE, Programs Comparison} \label{tab:programcomparison}
 \scriptsize
-\scalebox{.9}{\begin{tabular}{L{4cm} L{7cm} L{5cm}}
-\hline \hline
-& \multicolumn{1}{c}{ABC}& \multicolumn{1}{c}{CARE}\\
-\hline 
+\scalebox{.9}{\begin{tabular}{L{4cm} L{7cm} L{5cm}} \toprule
+& \multicolumn{1}{c}{ABC}& \multicolumn{1}{c}{CARE}\\ \midrule
 \textbf{Program Overview} &&\\
 \hspace{.5cm} Years Implemented &1972--1982&1978--1985\\
 \hspace{.5cm} Age of Entry/Exit & Birth to 5 years old &\checkmark\\
@@ -42,7 +40,7 @@
 \hspace{.5cm} Curriculum & Reading and math &\checkmark\\
 \hspace{.5cm} Staff-to-child Ratio &1:1&\checkmark\\
 \hspace{.5cm} Staff Qualifications &Graduate degree and training in special education & \checkmark\\
-\hline \hline
+\bottomrule
 \end{tabular}}
 \footnotesize
 \begin{tablenotes}
